# hospital

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  PatientsModel.cpp  PatientsModel.h  README.md  VisitsModel.cpp  VisitsModel.h  doctorsmodel.cpp  doctorsmodel.h  main.cpp  qml.qrc
qml/: AddPatientPage.qml  AddVisitPage.qml  BackgroundWithDots.qml  DoctorsPage.qml  HistoryPage.qml  LoginPage.qml  MainTabs.qml  PatientDetailPage.qml  PrimaryButton.qml  RegisterDialog.qml  RoomsPage.qml  StatusMessage.qml  StyledField.qml  Theme.qml  VisitDetailPage.qml  WindowControls.qml  main.qml
